--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Waifuseum</title>
 </head>
 
-<body>
+<body style="background-image: url(src/assets/background.jpg)">
     <div id="app"></div>
     <script type="module" src="src/main.js"></script>
 </body>
