chore: import global style directly

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,500;0,700;1,700&family=Poppins:wght@700&display=swap">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="src/main.scss" />
+
     <title>Waifuseum</title>
 </head>
 
